# zero_one_hack_01

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  package.json  skills-lock.json
apps/backend/: _tmp_tool_test.py  pyproject.toml  requirements.txt
apps/backend/artifacts/ecb/: latest.json
apps/backend/artifacts/ecb/CP0000EZ19M086NEST/: backtest_metrics.json  backtest_trajectories.json  external_signals.json  forecast.json  input.json
apps/backend/artifacts/ecb/ECBDFR/: backtest_metrics.json  backtest_trajectories.json  external_signals.json  forecast.json  input.json
apps/backend/artifacts/ecb/IRLTLT01EZM156N/: backtest_metrics.json  backtest_trajectories.json  forecast.json  (+2 more)
apps/backend/artifacts/fed_rate_forecast/: aggregated_forecast.json  latest.json
apps/backend/forecasting/: __init__.py  __main__.py  artifacts_cache.py  cli.py  env.py  fed_rate_pipeline.py  pipeline.py  regions.py  selection.py
apps/backend/forecasting/aggregation/: __init__.py  forecast_aggregator.py
apps/backend/forecasting/analysis/: __init__.py  ensemble_engine.py  forecast_series.py  scenario_classifier.py
apps/backend/forecasting/api/: __init__.py  fred_api.py  http_utils.py  sybilion_forecast_api.py
apps/backend/forecasting/catalog/: __init__.py  fed_data_sources.py
apps/backend/forecasting/chat/: __init__.py  service.py  tools.py  ui_stream.py
apps/backend/forecasting/example_artefacts/: backtest_metrics.json
apps/backend/forecasting/payloads/: __init__.py  base_payload_builder.py  ecb_rate_payloads.py  fed_rate_payloads.py
(+101 files in other folders)
