[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forecasting-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
]

[project.scripts]
forecast-pipeline = "forecasting.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forecasting*"]
